<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Noise Ninja</string>
    <string name="title_activity_home">Ninjas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_hardcode1">R</string>
    <string name="action_hardcode2">G</string>
    <string name="waiting_for_location">Waiting for current location</string>
    <string name="improper_query">Improper Query</string>
    <string name="no_location_input">Improper Query</string>
    <string name="current_location">Current Location</string>
    <string name="places_fetch_error">No Places found</string>
    <string name="enter_place_title">Enter Place Title</string>
    <string name="enter_short_message">Enter Short Message</string>
    <string name="enter_radius">Enter Radius</string>
    <string name="default_radius">500</string>
    <string name="meters">mts</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="improper_geocoder_query">Improper geocoder query</string>
    <string name="loading_address">Loading Address</string>
    <string name="add_place">Add Place</string>
    <string name="failure">Failure</string>
    <string name="invalid_lat_lng">Invalid latitude or longitude used</string>
    <string name="no_geocoder">No geocoder available</string>
    <string name="no_location_data">No location data provided</string>
    <string name="error_enter_data">Enter Value</string>
    <string name="title_add_place">Tag a No Noise Zone</string>
    <string name="test_mode_already">Already running a test m</string>
    <string name="ok">Ok</string>

</resources>